# timp2

./: CMakeLists.txt  class.cpp  test.cpp
.github/workflows/: build.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  singleton_app
